# oofd-kz-parser

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
oofd_kz_parser/: const.py  exceptions.py  models.py  parser.py  settings.py
